2022-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* src/ql/time/calendars/argentina.cpp: Set to utf-8 for clang++-15
	* src/ql/time/calendars/unitedkingdom.cpp: Add the Queen's Funeral
	Bank Holiday from QuantLib 1.28

2022-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/ql/time/calendar.cpp: Update from QuantLib 1.27
	* src/ql/time/calendar.hpp: Idem
	* src/ql/time/calendars/australia.cpp: Idem
	* src/ql/time/calendars/australia.hpp: Idem
	* src/ql/time/calendars/saudiarabia.cpp: Idem

2022-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/dates.cpp (isHoliday): Add missing negation for isBusinessDay

2022-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

2022-01-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Roll minor version

	* src/ql/time/calendars/china.cpp: Updated from QuantLib 1.25

2021-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/ql/time/asx.cpp: Remove file unused by calendaring
	* src/ql/time/dategenerationrule.cpp: Idem
	* src/ql/time/dategenerationrule.hpp: Idem
	* src/ql/time/ecb.cpp: Idem
	* src/ql/time/imm.cpp: Idem
	* src/ql/time/schedule.cpp: Idem
	* src/ql/time/all.hpp: Adjusted accordingly
	* src/Makevars: Idem
	* src/Makevars.win: Idem

2021-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add badges following first CRAN upload

2021-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.1

2021-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Small edits

2021-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/ql/qldefines.hpp: Updated from QuantLib
	* src/ql/time/calendar.cpp: Ditto

2021-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Expanded

2021-11-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial minimal version